<resources>
    <string name="app_name">有道</string>
    <string name="img_splash">img_splash</string>
    <string name="img_ads">img_ads</string>
    <string name="txt_ads">跳过广告</string>
    <string name="img_dictionary_camera_toolbar">img_dictionary_camera_toolbar</string>
    <string name="edt_dictionary_toolbar">在此输入单词或句子</string>
    <string name="but_dictionary_recommend">推荐</string>
    <string name="but_dictionary_follow">我的关注</string>
    <string name="but_dictionary_foreigners">老外看东西</string>
    <string name="but_dictionary_column">全部栏目</string>
    <string name="img_dictionary_recommend_picture_one">one</string>
    <string name="img_dictionary_recommend_picture_two">two</string>
    <string name="img_dictionary_recommend_picture_three">three</string>
    <string name="img_dictionary_recommend_picture_ad">ad</string>
    <string name="txt_dictionary_recommend_today_title">今日公开课</string>
    <string name="img_dictionary_recommend_today">img_dictionary_recommend_today</string>
    <string name="txt_dictionary_recommend_today_card_mark">报名</string>
    <string name="txt_dictionary_follow_top">为您推荐的优质专栏</string>
    <string name="img_dictionary_follow">img_dictionary_follow</string>
    <string name="txt_dictionary_follow_mark">关注</string>
    <string name="txt_dictionary_column_top">精选专栏</string>
    <string name="txt_dictionary_column_anecdote">奇闻趣事</string>
    <string name="but_dictionary_column_one_sentence">壹句</string>
    <string name="but_dictionary_column_foreigners">老外看东西</string>
    <string name="but_dictionary_column_morning">有道晨读</string>
    <string name="but_dictionary_column_welfare">有道福利社</string>
    <string name="but_dictionary_column_life">人生玩家</string>
    <string name="but_dictionary_column_idol">21天安利爱豆</string>
    <string name="but_dictionary_column_cartoon">漫画英语</string>
    <string name="but_dictionary_column_research">脑洞研究所</string>
    <string name="but_dictionary_column_self_study">有道自习室</string>
    <string name="but_dictionary_column_relaxed">轻松一刻</string>
    <string name="but_dictionary_column_world">我们一起看世界</string>
    <string name="but_dictionary_column_fresh">歪果新鲜事</string>
    <string name="but_dictionary_column_originality">创意补给站</string>
    <string name="but_dictionary_column_masses">吃瓜群众集结地</string>
    <string name="but_dictionary_column_crops">青苗课堂</string>
    <string name="txt_dictionary_column_foreigner">歪国人说</string>
    <string name="but_dictionary_column_show">毒角SHOW</string>
    <string name="but_dictionary_column_omg">OMG！有老外</string>
    <string name="but_dictionary_column_interview">饶舜英语访谈</string>
    <string name="txt_dictionary_column_movies">影视音乐</string>
    <string name="but_dictionary_column_music">动听英乐</string>
    <string name="but_dictionary_column_time">碎片时间学英语</string>
    <string name="txt_dictionary_column_culture">文化资讯</string>
    <string name="but_dictionary_column_course">网易公开课</string>
    <string name="but_dictionary_column_earlier">英文早点</string>
    <string name="but_dictionary_column_intensive">有道外刊精读</string>
    <string name="but_dictionary_column_child">有道少儿英语</string>
    <string name="but_dictionary_column_prose">散文名著</string>
    <string name="but_dictionary_column_bilingual">双语美文</string>
    <string name="but_dictionary_column_reading">潘之声美文朗读</string>
    <string name="but_dictionary_column_english_reading">英语美文朗读</string>
    <string name="but_dictionary_column_breakfast">早餐英语</string>
    <string name="but_dictionary_column_story">故事花园</string>
    <string name="txt_dictionary_column_examination">应试备考</string>
    <string name="but_dictionary_column_interesting">建昆英语趣闻社</string>
    <string name="but_dictionary_column_postgraduate">有道考神考研</string>
    <string name="but_dictionary_column_material">双语有料</string>
    <string name="txt_translate_style">英汉</string>
    <string name="txt_translate_slant">/</string>
    <string name="edt_enter">在此输入单词或句子</string>
    <string name="img_trans_down">img_trans_down</string>
    <string name="but_home_dictionary">词典</string>
    <string name="but_home_translate">翻译</string>
    <string name="but_home_course">精品课</string>
    <string name="but_home_explore">发现</string>
    <string name="but_home_mine">我的</string>
    <string name="txt_dictionary">词典..</string>
    <string name="txt_translate_language_former">中文</string>
    <string name="txt_translate_language_latter">英文</string>
    <string name="txt_translate_language_down">img_translate_language_down</string>
    <string name="img_translate_language_change">img_translate_language_change</string>
    <string name="edt_translate_text">在此输入要翻译的文本</string>
    <string name="but_translate_camera"> 拍照翻译</string>
    <string name="but_translate_conversation">对话翻译</string>
    <string name="img_translate_line">img_translate_line</string>
    <string name="txt_translate_result">明天一定会是个好日子</string>
    <string name="txt_course">精品课，，，</string>
    <string name="img_course_toolbar">img_course_toolbar</string>
    <string name="edt_course_toolbar">输入课程或教师名称</string>
    <string name="img_course_endless">img_course_endless</string>
    <string name="img_course_choice">img_course_choice</string>
    <string name="txt_course_live_former_top">直播</string>
    <string name="txt_course_live_former_below">中</string>
    <string name="txt_course_live_latter">|  人 人 都 该 学 一 门 编 程 课</string>
    <string name="img_course_live_button">img_course_live_button</string>
    <string name="img_course_live_background">img_course_live_background</string>
    <string name="img_course_live_icon">img_course_live_icon</string>
    <string name="txt_course_recommend_title">名师推荐</string>
    <string name="txt_course_recommend_more">查看更多</string>
    <string name="img_course_skip_arrow">img_course_skip_arrow</string>
    <string name="img_course_recommend">img_course_recommend</string>
    <string name="txt_course_guidance">导学精髓</string>
    <string name="img_course_guidance_video">img_course_guidance_video</string>
    <string name="img_course_guidance_video_button">img_course_guidance_video_button</string>
    <string name="img_course_guidance_play">img_course_guidance_play</string>
    <string name="txt_course_guidance_title_mark">详情</string>
    <string name="txt_course_select_title">精选好课</string>
    <string name="txt_course_select_list_free">免费</string>
    <string name="txt_course_radio_title">音频伴学</string>
    <string name="txt_course_radio_title_mark">换一换</string>
    <string name="img_course_radio_picture">img_course_radio_picture</string>
    <string name="txt_course_radio_list_title">一个公式读天下英文</string>
    <string name="txt_course_radio_time">1\'30\'\'</string>
    <string name="txt_course_radio_listen">767人收听</string>
    <string name="img_course_radio_line">img_course_radio_line</string>
    <string name="img_course_radio_button">img_course_radio_button</string>
    <string name="img_course_radio_picture_final">img_course_radio_picture_final</string>
    <string name="txt_explore">壹句</string>
    <string name="img_explore_item">img_explore_item</string>
    <string name="img_explore_roll_item">img_explore_roll_item</string>
    <string name="img_title_mine">img_title_mine</string>
    <string name="txt_mine">登录</string>
    <string name="img_mine">img_mine</string>
    <string name="img_mine_list">img_mine_list</string>
    <string name="img_mine_bar_head">img_mine_bar_head</string>
    <string name="txt_mine_title_mark">立即登录，解锁更多实用功能！</string>
    <string name="txt_bottom_dialog">这个是列表</string>
    <string name="edt_search">在此输入单词或句子</string>
    <string name="img_more_search_language">img_more_search_language</string>
    <string name="img_search_no_history">img_search_no_history</string>
    <string name="img_search_back">img_search_back</string>
    <string name="tab_english">英汉</string>
    <string name="tab_chinese">汉语</string>
    <string name="tab_japan">日汉</string>
    <string name="tab_korea">韩汉</string>
    <string name="tab_france">法汉</string>
    <string name="tab_germany">德汉</string>
    <string name="tab_portugal">葡汉</string>
    <string name="tab_spain">西汉</string>
    <string name="tab_russia">俄汉</string>
    <string name="tab_tibetan">藏汉</string>
    <string name="img_search_clear">clear</string>
    <string name="img_search_black">black</string>
    <string name="img_word_pronunciation">img_word_pronunciation</string>
    <string name="img_word_pronunciation_american">img_word_pronunciation_american</string>
    <string name="img_word_collection">img_word_collection</string>
    <string name="img_word_share">img_word_share</string>
    <string name="img_not_find_collection">img_not_find_collection</string>
    <string name="img_not_find_share">img_not_find_share</string>
    <string name="img_not_find">img_not_find</string>
    <string name="txt_toast">再按一次退出有道</string>
</resources>
