<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NotFindActivity">

    <RelativeLayout
        android:id="@+id/layout_not_find"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txt_not_find"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorDictionaryRecommendTitle"
            android:textSize="38sp" />

        <ImageView
            android:id="@+id/img_not_find_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/txt_not_find"
            android:background="@drawable/word_collection_selector"
            android:contentDescription="@string/img_not_find_collection" />

        <ImageView
            android:id="@+id/img_not_find_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/img_not_find_collection"
            android:contentDescription="@string/img_not_find_share"
            android:src="@drawable/word_share_with_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_not_find"
        android:layout_marginTop="10dp"
        android:background="@color/colorPink" />

    <ImageView
        android:id="@+id/img_not_find"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_not_find"
        android:scaleType="center"
        android:src="@drawable/search_norecord" />

</RelativeLayout>