<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dictionary_recommend_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="2"
        android:singleLine="true"
        android:textColor="@color/colorDictionaryRecommendTitle"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linear_dictionary_recommend_picture"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_below="@id/txt_dictionary_recommend_title"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_dictionary_recommend_picture_one"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/img_dictionary_recommend_picture_one"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/img_dictionary_recommend_picture_two"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/img_dictionary_recommend_picture_two"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/img_dictionary_recommend_picture_three"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/img_dictionary_recommend_picture_three"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_dictionary_recommend_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_dictionary_recommend_picture"
        android:textColor="@color/colorDictionaryRecommendMark"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_below="@id/txt_dictionary_recommend_mark"
        android:layout_marginTop="5dp"
        android:background="@color/colorExploreLine" />

</RelativeLayout>