<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="false"
    tools:context=".activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_mine"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#ffffff">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_mine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="#ffffff"
            app:expandedTitleMarginStart="15dp"
            app:expandedTitleMarginTop="-10dp"
            app:collapsedTitleGravity="top|start"
            app:collapsedTitleTextAppearance="@style/MineAppbarStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/txt_mine">

    <TextView
        android:id="@+id/txt_mine_title_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:text="@string/txt_mine_title_mark"
        android:textColor="@color/colorWord_translate"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/img_mine_bar_head"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/img_mine_bar_head"
        android:src="@drawable/img_mine_head" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_mine"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_collapseMode="pin">

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_mine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff" />

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>